# gst-data-video

./: Cargo.toml  readme.md  test_call.rest
examples/: data-from-decklink.rs  data-to-decklink.rs  src-to-sink.rs
src/: encoding.rs  lib.rs  utils.rs
src/datasink/: imp.rs  mod.rs
src/datasrc/: imp.rs  mod.rs
src/encoding/: convert.rs
src/utils/: convert.rs
