[package]
name = "gst-data-video"
version = "0.1.0"
edition = "2018"
description = "Plugins to pass data using video stream"
repository = "https://github.com/reinismu/gst-data-video"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
glib = "0.14.5"
gst = { version = "0.17.1", package = "gstreamer"}
gst-base = { version = "0.17.1", package = "gstreamer-base" }
gst-video = { version = "0.17.1", package = "gstreamer-video" }
once_cell = "1.0"
rand = "0.8.4"

[lib]
name = "gstdatavideo"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.1"

[[example]]
name = "data-to-decklink"
path = "examples/data-to-decklink.rs"

[[example]]
name = "data-from-decklink"
path = "examples/data-from-decklink.rs"
