[package]
name = "gst-data-video"
version = "0.2.1"
edition = "2018"
description = "Plugins to pass data using video stream"
repository = "https://github.com/reinismu/gst-data-video"
homepage = "https://github.com/reinismu/gst-data-video"
license = "MIT"
readme = "readme.md"
keywords = ["gstreamer", "gst", "video", "data"]

[dependencies]
bytes = "1.1.0"
glib = "0.14.5"
gst = { version = "0.17.1", package = "gstreamer" }
gst-base = { version = "0.17.1", package = "gstreamer-base" }
gst-video = { version = "0.17.1", package = "gstreamer-video" }
once_cell = "1.0"

[lib]
name = "gstdatavideo"
crate-type = ["cdylib", "rlib", "staticlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.1"

[[example]]
name = "data-to-decklink"
path = "examples/data-to-decklink.rs"

[[example]]
name = "data-from-decklink"
path = "examples/data-from-decklink.rs"

[[example]]
name = "src-to-sink"
path = "examples/src-to-sink.rs"
